--- a/app/views/signs/show.html.erb
+++ b/app/views/signs/show.html.erb
@@ -98,8 +98,10 @@
 
       </div>
 
-      <button class="btn btn-secondary mr-4" id="copyButton">Copiar código</button>
-      <%= link_to 'Voltar', signs_path, :class => 'btn btn-warning' %>
+
+      <button class="btn btn-secondary mb-4" id="copyButton" data-clipboard-target="#codetocopy">Copiar código</button>
+      <a class="btn btn-primary mb-4" href="https://www.kinghost.com.br/wiki/artigo/assinatura-no-roundcube/" target="_blank">Como inserir a assinatura no meu email?</a>
+      <%= link_to 'Voltar', signs_path, :class => 'btn btn-warning mb-4' %>
 
     </div>
 
