--- a/app/views/signs/show.html.erb
+++ b/app/views/signs/show.html.erb
@@ -52,7 +52,7 @@
       <div style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center">
 
         <div style="padding: 1em; padding-right: .5em">
-          <div style="border-radius:50%; width:100px; height: 100px; background-image:url(https://cryptic-plateau-40412.herokuapp.com/signs'+@signs.imagem.to_s+'); background-size: cover"></div>
+          <div style="border-radius:50%; width:100px; height: 100px; background-image:url(https://cryptic-plateau-40412.herokuapp.com'+@signs.imagem.to_s+'); background-size: cover"></div>
         </div>
 
         <div style="padding: 1em; padding-left: .5em">
