--- a/app/views/signs/_form.html.erb
+++ b/app/views/signs/_form.html.erb
@@ -28,7 +28,7 @@
 			<div class="row mb-4">
 
 				<div class="col-12">
-					<label for="imagem">Avatar <a href="https://drive.google.com/open?id=0B_1MsVcw9MpSQjREYVJYczRHVUE" target="_blank"><small>(Pegue a sua foto)</small></a></label>
+					<label for="imagem">Avatar <a href="https://drive.google.com/open?id=0B_1MsVcw9MpSQjREYVJYczRHVUE" target="_blank"><strong>(>>>Clique aqui para pegar sua foto atualizada<<<)</strong></a></label>
 					<div class="input-group">
 						<%= f.file_field(:imagem, accept: 'image/png,image/gif,image/jpeg') %>
 					</div>
