--- a/app/views/signs/show.html.erb
+++ b/app/views/signs/show.html.erb
@@ -1,118 +1,199 @@
 <div class="container">
-  <div class="title-box p-4 row mb-4 btn-primary">
-    <h1>Código</h1>
-    <h2>Copie o código e cole em seu gerenciador de email.</h2>
-  </div>
+	<div class="title-box p-4 row mb-4 btn-primary">
+		<h1>Código</h1>
+		<h2>Copie o código e cole em seu gerenciador de email.</h2>
+	</div>
 </div>
 
 <div class="container">
 
-  <div class="row">
+	<div class="row">
 
-    <div class="col-12 form-custom p-4" id="codetocopy">
+		<div class="col-12 form-custom p-4" id="codetocopy">
 
-      <%= case @signs.empresa
-      when 'AMPLIART' 
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/ampliart.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-ampliart.png'
-        puts @link = 'ampliart.com'
-      when 'CONGESTIC' 
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/congestic.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-congestic.png'
-        puts @link = 'soitic.com'
-      when 'ECOS' 
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/ecos.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-ecos.png'
-        puts @link = 'ecosoitic.com.br'
-      when 'EFI' 
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/efi.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-efi.png'
-        puts @link = 'efidiomas.com'
-      when 'ELFUTEC' 
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/elfutec.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-elfutec.png'
-        puts @link = 'elfutec.com.br'
-      when 'MEDSYSTEM' 
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/medsystem.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-medsystem.png'
-        puts @link = 'soitic.com'
-      when 'PACS' 
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/soitic.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-soitic.png'
-        puts @link = 'soitic.com'
-      when 'USAS' 
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/usa.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-usa.png'
-        puts @link = 'soitic.com'
-      else
-        puts @empresa = 'http://soitic.com/images/assinaturas/empresas/soitic.png'
-        puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-soitic.png'
-        puts @link = 'soitic.com'
-      end
-      %>
+			<%= case @signs.empresa
+			when 'AMPLIART' 
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/ampliart.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-ampliart.png'
+				puts @link = 'ampliart.com'
+			when 'CONGESTIC' 
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/congestic.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-congestic.png'
+				puts @link = 'soitic.com'
+			when 'ECOS' 
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/ecos.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-ecos.png'
+				puts @link = 'ecosoitic.com.br'
+			when 'EFI' 
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/efi.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-efi.png'
+				puts @link = 'efidiomas.com'
+			when 'ELFUTEC' 
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/elfutec.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-elfutec.png'
+				puts @link = 'elfutec.com.br'
+			when 'MEDSYSTEM' 
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/medsystem.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-medsystem.png'
+				puts @link = 'soitic.com'
+			when 'PACS' 
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/soitic.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-soitic.png'
+				puts @link = 'soitic.com'
+			when 'USAS' 
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/usa.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-usa.png'
+				puts @link = 'soitic.com'
+			else
+				puts @empresa = 'http://soitic.com/images/assinaturas/empresas/soitic.png'
+				puts @cta = 'http://soitic.com/images/assinaturas/cta/cta-soitic.png'
+				puts @link = 'soitic.com'
+			end
+			%>
 
-      <%= h '<div>
-      <div>
-        <h2 style="font-family:Arial; font-size:12pt; color: rgb(7,86,122)">OBRIGADO POR ESTAR COM O GRUPO SOITIC</h2>
-        <br><br><br><br><br><br><br>
-        <p style="font-family:Arial; font-size:12pt; font-weight:bold; color: rgb(7,86,122)">Foi um prazer estar com voc&ecirc!</p>
-      </div>
-      <br><br>
-      <div style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center">
+			<%= h '<div>
+			<div>
+				<h2 style="font-family:Arial; font-size:12pt; color: rgb(7,86,122)">OBRIGADO POR ESTAR COM O GRUPO SOITIC</h2>
+				<br><br><br><br><br><br><br>
+				<p style="font-family:Arial; font-size:12pt; font-weight:bold; color: rgb(7,86,122)">Foi um prazer estar com voc&ecirc!</p>
+			</div>
+			<br><br>
+			<div style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center">
 
-        <div style="padding: 1em; padding-right: .5em">
-          <div style="border-radius:50%; width:100px; height: 100px; background-image:url(https://cryptic-plateau-40412.herokuapp.com'+@signs.imagem.to_s+'); background-size: cover"></div>
-        </div>
+				<div style="padding: 1em; padding-right: .5em">
+					<div style="border-radius:50%; width:100px; height: 100px; background-image:url(https://cryptic-plateau-40412.herokuapp.com'+@signs.imagem.to_s+'); background-size: cover"></div>
+				</div>
 
-        <div style="padding: 1em; padding-left: .5em">
-          <p style="font-family: Lucida Sans, sans-serif; color: rgb(7,86,122); font-size: 12px; margin: 5px;"><b>'+@signs.nome+'</b> | '+@signs.cargo+'</p>
+				<div style="padding: 1em; padding-left: .5em">
+					<p style="font-family: Lucida Sans, sans-serif; color: rgb(7,86,122); font-size: 12px; margin: 5px;"><b>'+@signs.nome+'</b> | '+@signs.cargo+'</p>
 
-          <p style="font-family: Lucida Sans, sans-serif; color: #51A7D9; font-weight: lighter; font-size: 12px; margin: 5px;">'+@signs.telefone+' | Ramal: '+@signs.ramal+' | '+@signs.celular+'</p>
+					<p style="font-family: Lucida Sans, sans-serif; color: #51A7D9; font-weight: lighter; font-size: 12px; margin: 5px;">'+@signs.telefone+' | Ramal: '+@signs.ramal+' | '+@signs.celular+'</p>
 
-          <p style="font-family: Lucida Sans, sans-serif; color: rgb(129,129,129); font-weight: lighter; font-size: 12px; margin: 5px;">Skype: '+@signs.skype+'</p>
+					<p style="font-family: Lucida Sans, sans-serif; color: rgb(129,129,129); font-weight: lighter; font-size: 12px; margin: 5px;">Skype: '+@signs.skype+'</p>
 
-          <a href="http://'+@link+'" target="_blank" style="font-family: Lucida Sans, sans-serif; color: #51A7D9; font-weight: lighter; font-size: 12px; margin: 5px; text-decoration: none">'+@link+'</a>
-        </div>
+					<a href="http://'+@link+'" target="_blank" style="font-family: Lucida Sans, sans-serif; color: #51A7D9; font-weight: lighter; font-size: 12px; margin: 5px; text-decoration: none">'+@link+'</a>
+				</div>
 
-      </div>
+			</div>
 
-      <div style="padding-left: 1em; display: flex; flex-direction: row; justify-content: flex-start; align-items: center">
+			<div style="padding-left: 1em; display: flex; flex-direction: row; justify-content: flex-start; align-items: center">
 
-        <a href="http://www.catsoitic.com.br/catexpo/" target="_blank" style="text-decoration: none">
-          <div style="border: 3px solid rgb(232, 189, 53); padding: 10px; width: fit-content">
-            <p style="font-family: Lucida Sans, sans-serif; color: rgb(232, 189, 53); font-weight: bold; font-size: 11pt; margin: 0px;">Conheça nosso catálogo ></p>
-          </div>
-        </a>
-
-
-        <div style="max-height: 50px; padding: 1em; display: flex; justify-content: center; align-items: center;">
-          <a href="http://soitic.com" target="_blank"><img style="height: 50px; margin-right: 1em;" src="'+@empresa+'" alt="soitic"></a>
-        </div>
-      </div>
+				<a href="http://www.catsoitic.com.br/catexpo/" target="_blank" style="text-decoration: none">
+					<div style="border: 3px solid rgb(232, 189, 53); padding: 10px; width: fit-content">
+						<p style="font-family: Lucida Sans, sans-serif; color: rgb(232, 189, 53); font-weight: bold; font-size: 11pt; margin: 0px;">Conheça nosso catálogo ></p>
+					</div>
+				</a>
 
 
-      <div style="font-family: sans-serif; color: gray; padding: 1em">
-        <p style="text-align: left; font-size: 11px">Enviado por Grupo Soitic<span style="display: inline-block; width: 100%;"></span>
-          Rua Paraná, 497 | Bairro dos Funcionários<span style="display: inline-block; width: 100%;"></span>
-          Poços de Caldas | MG<span style="display: inline-block; width: 100%;"></span>
-          0800 707 5900 | +55 35 3729-9900<span style="display: inline-block; width: 100%;"></span>
-          <a href="http://www.vip-medsystem.com.br/login.aspx" target="_blank">vip.soitic.com</a></p>
-        </div>
-
-        <div>
-        <img style="margin-right: 1em;" src="'+@cta+'" alt="cta">
-        </div>' %>
+				<div style="max-height: 50px; padding: 1em; display: flex; justify-content: center; align-items: center;">
+					<a href="http://soitic.com" target="_blank"><img style="height: 50px; margin-right: 1em;" src="'+@empresa+'" alt="soitic"></a>
+				</div>
+			</div>
 
 
+			<div style="font-family: sans-serif; color: gray; padding: 1em">
+				<p style="text-align: left; font-size: 11px">Enviado por Grupo Soitic<span style="display: inline-block; width: 100%;"></span>
+					Rua Paraná, 497 | Bairro dos Funcionários<span style="display: inline-block; width: 100%;"></span>
+					Poços de Caldas | MG<span style="display: inline-block; width: 100%;"></span>
+					0800 707 5900 | +55 35 3729-9900<span style="display: inline-block; width: 100%;"></span>
+					<a href="http://www.vip-medsystem.com.br/login.aspx" target="_blank">vip.soitic.com</a></p>
+				</div>
 
-      </div>
+				<div>
+					<img style="margin-right: 1em;" src="'+@cta+'" alt="cta">
+				</div>' %>
 
 
-      <button class="btn btn-secondary mb-4" id="copyButton" data-clipboard-target="#codetocopy">Copiar código</button>
-      <a class="btn btn-primary mb-4" href="https://www.kinghost.com.br/wiki/artigo/assinatura-no-roundcube/" target="_blank">Como inserir a assinatura no meu email?</a>
-      <%= link_to 'Voltar', signs_path, :class => 'btn btn-warning mb-4' %>
 
-    </div>
+			</div>
 
 
-  </div>
+			<button class="btn btn-secondary mb-4" id="copyButton" data-clipboard-target="#codetocopy">Copiar código</button>
+			<a class="btn btn-primary mb-4" href="https://www.kinghost.com.br/wiki/artigo/assinatura-no-roundcube/" target="_blank">Como inserir a assinatura no meu email?</a>
+			<%= link_to 'Voltar', signs_path, :class => 'btn btn-warning mb-4' %>
+			<button class="btn btn-success mb-4" data-toggle="modal" data-target="#exampleModal">Prévia</button>
+
+
+		</div>
+
+
+	</div>
+
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">Modal title</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+
+					<div>
+						<div>
+							<h2 style="font-family:Arial; font-size:12pt; color: rgb(7,86,122)">OBRIGADO POR ESTAR COM O GRUPO SOITIC</h2>
+							<br><br><br><br><br><br><br>
+							<p style="font-family:Arial; font-size:12pt; font-weight:bold; color: rgb(7,86,122)">Foi um prazer estar com voc&ecirc!</p>
+						</div>
+						<br><br>
+						<div style="display: flex; flex-direction: row; justify-content: flex-start; align-items: center">
+
+							<div style="padding: 1em; padding-right: .5em">
+								<div style="border-radius:50%; width:100px; height: 100px; background-image:url('https://cryptic-plateau-40412.herokuapp.com<%=@signs.imagem.to_s%>'); background-size: cover"></div>
+							</div>
+
+							<div style="padding: 1em; padding-left: .5em">
+								<p style="font-family: Lucida Sans, sans-serif; color: rgb(7,86,122); font-size: 12px; margin: 5px;"><b><%=@signs.nome%></b> | <%=@signs.cargo%></p>
+
+								<p style="font-family: Lucida Sans, sans-serif; color: #51A7D9; font-weight: lighter; font-size: 12px; margin: 5px;"><%=@signs.telefone%> | Ramal: <%=@signs.ramal%> | <%=@signs.celular%></p>
+
+								<p style="font-family: Lucida Sans, sans-serif; color: rgb(129,129,129); font-weight: lighter; font-size: 12px; margin: 5px;">Skype: <%=@signs.skype%></p>
+
+								<a href="http://<%=@link%>" target="_blank" style="font-family: Lucida Sans, sans-serif; color: #51A7D9; font-weight: lighter; font-size: 12px; margin: 5px; text-decoration: none"><%=@link%></a>
+							</div>
+
+						</div>
+
+						<div style="padding-left: 1em; display: flex; flex-direction: row; justify-content: flex-start; align-items: center">
+
+							<a href="http://www.catsoitic.com.br/catexpo/" target="_blank" style="text-decoration: none">
+								<div style="border: 3px solid rgb(232, 189, 53); padding: 10px; width: fit-content">
+									<p style="font-family: Lucida Sans, sans-serif; color: rgb(232, 189, 53); font-weight: bold; font-size: 11pt; margin: 0px;">Conheça nosso catálogo ></p>
+								</div>
+							</a>
+
+
+							<div style="max-height: 50px; padding: 1em; display: flex; justify-content: center; align-items: center;">
+								<a href="http://soitic.com" target="_blank"><img style="height: 50px; margin-right: 1em;" src="<%=@empresa%>" alt="soitic"></a>
+							</div>
+						</div>
+
+
+						<div style="font-family: sans-serif; color: gray; padding: 1em">
+							<p style="text-align: left; font-size: 11px">Enviado por Grupo Soitic<span style="display: inline-block; width: 100%;"></span>
+								Rua Paraná, 497 | Bairro dos Funcionários<span style="display: inline-block; width: 100%;"></span>
+								Poços de Caldas | MG<span style="display: inline-block; width: 100%;"></span>
+								0800 707 5900 | +55 35 3729-9900<span style="display: inline-block; width: 100%;"></span>
+								<a href="http://www.vip-medsystem.com.br/login.aspx" target="_blank">vip.soitic.com</a>
+							</p>
+						</div>
+
+						<div>
+							<img style="margin-right: 1em;" src="<%=@cta%>" alt="cta">
+						</div>
+
+
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary">Save changes</button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+
+
