--- a/app/views/signs/show.html.erb
+++ b/app/views/signs/show.html.erb
@@ -119,8 +119,8 @@
 
 	</div>
 
-	<div class="modal fade">
-		<div class="modal-dialog" role="document">
+	<div class="modal fade bd-example-modal-lg">
+		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title">Modal title</h5>
