--- a/app/views/signs/show.html.erb
+++ b/app/views/signs/show.html.erb
@@ -119,7 +119,7 @@
 
 	</div>
 
-	<div class="modal fade bd-example-modal-lg">
+	<div class="modal fade bd-example-modal-lg" id="modal_preview">
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
